--- a/index.html
+++ b/index.html
@@ -57,20 +57,10 @@
   </style>
 </head>
 <body>
-  <audio id="bgMusic" autoplay loop muted>
+  <audio id="bgMusic" autoplay loop >
     <source src="song.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
-  
-  <script>
-    window.addEventListener('load', function () {
-      const audio = document.getElementById('bgMusic');
-      audio.muted = false;
-      audio.play().catch(function (error) {
-        console.log('Autoplay prevented. User interaction needed.');
-      });
-    });
-  </script>
   <div class="card">
     <img src="mummy.png" alt="Mom's Photo">
     <h1>Happy Mother's Day, Aai! 💐</h1>
