--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <p>Today is Mother’s Day, and I just want you to know how much I love you and how lucky I am to have you. </p>
     <p>Please don’t stay mad at me.💖</p>
     <div class="heart">❤️</div>
+    <button class="play-button" onclick="document.getElementById('bgMusic').play()">Play Music 🎶</button>
   </div>
 
 </body>
