--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         console.log('Autoplay prevented. User interaction needed.');
       });
     });
+    </script>
   <div class="card">
     <img src="mummy.png" alt="Mom's Photo">
     <h1>Happy Mother's Day, Aai! 💐</h1>
