--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       });
     });
     </script>
+  <button class="play-button" onclick="document.getElementById('bgMusic').play()">Chick Here🎶</button>
   <div class="card">
     <img src="mummy.png" alt="Mom's Photo">
     <h1>Happy Mother's Day, Aai! 💐</h1>
@@ -82,7 +83,7 @@
     <p>Today is Mother’s Day, and I just want you to know how much I love you and how lucky I am to have you. </p>
     <p>Please don’t stay mad at me.💖</p>
     <div class="heart">❤️</div>
-    //<button class="play-button" onclick="document.getElementById('bgMusic').play()">Play Music 🎶</button>
+    
   </div>
 
 </body>
