--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
   <div class="card">
     <img src="mummy.png" alt="Mom's Photo">
     <h1>Happy Mother's Day, Aai! 💐</h1>
-    <p>Aaj Mother's Day aahe… aani aaj  sarvataadhi tula ek gosht manapasun sangaychi aahe.</p>
-    <p>"Sorry"</p>
+    <p>    Aaj Mother's Day aahe… aani aaj  sarvataadhi I just want to come to you, hug you tight, and say — 'I’m really sorry.'</p>
     <p>I just want to say I'm really sorry for the way I behaved earlier. I know I was rude and totally out of line, and I regret it so much.
 
       आई, तू माझं सगळं आहेस. तुझ्या शिवाय जीवन कल्पनाही करता येत नाही. तू आईच नाही, माझी खरी मैत्रीण, मार्गदर्शक आणि प्रत्येक अडचणीतला आधार आहेस. तुझं प्रेम, तुझी काळजी, तुझं सतत माझ्या पाठीशी उभं राहणं — हे सगळं खूप अनमोल आहे.</p>
