--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <p>    Aaj Mother's Day aahe… aani aaj  sarvataadhi I just want to come to you, hug you tight, and say — 'I’m really sorry.'</p>
     <p>I just want to say I'm really sorry for the way I behaved earlier. I know I was rude and totally out of line, and I regret it so much.
 
-      आई, तू माझं सगळं आहेस. तुझ्या शिवाय जीवन कल्पनाही करता येत नाही. तू आईच नाही, माझी खरी मैत्रीण, मार्गदर्शक आणि प्रत्येक अडचणीतला आधार आहेस. तुझं प्रेम, तुझी काळजी, तुझं सतत माझ्या पाठीशी उभं राहणं — हे सगळं खूप अनमोल आहे.</p>
+      आई, तू माझं सगळं आहेस. तुझ्या शिवाय life imagine करता येत नाही. तू आईच नाही, माझी bestfriend, मार्गदर्शक आणि प्रत्येक अडचणीतला आधार आहेस. तुझं प्रेम, तुझी काळजी, तुझं सतत माझ्या पाठीशी उभं राहणं — हे सगळं खूप important आहे.</p>
     <p>Today is Mother’s Day, and I just want you to know how much I love you and how lucky I am to have you. </p>
     <p>Please don’t stay mad at me.💖</p>
     <div class="heart">❤️</div>
